<resources>
    <string name="app_name">UniversityExam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="repositories">Repositories</string>
    <string name="maps">Maps</string>
    <string name="contacts">Contacts</string>
    <string name="about_device">About device</string>
    <string name="sensors">Sensors</string>
    <string name="logout">Log out</string>

    <string name="network_error_message">Network error</string>
    <string name="remote_error_message">Remote server error</string>
    <string name="unknown_error_message">Unknown error</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="github">GitHub</string>
    <string name="logo">LOGO</string>
    <string name="photo_from_camera">Photo from camera</string>
    <string name="login">Login</string>
    <string name="github_url">Github url</string>
    <string name="yota">Реклама YOTA в приложении Аблаева Акмаля</string>
</resources>
