<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_repos"
            android:icon="@drawable/menu_repos"
            android:title="@string/repositories" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/menu_maps"
            android:title="@string/maps" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/menu_contacts"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/menu_information"
            android:title="@string/about_device" />
        <item
            android:id="@+id/nav_sensor"
            android:icon="@drawable/menu_sensor"
            android:title="@string/sensors" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/menu_logout"
            android:title="@string/logout" />
    </group>


</menu>
